plugins {
    id("mockito.library-conventions")
}

description = "ErrorProne plugins for Mockito"

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

dependencies {
    compileOnly libs.autoservice
    annotationProcessor libs.autoservice

    implementation project(":mockito-core")
    implementation libs.errorprone

    testImplementation 'junit:junit:4.13.2'
    testImplementation libs.errorprone.test.api
}

test {
    inputs.files(configurations.errorproneJavac).withNormalizer(ClasspathNormalizer)
    jvmArgs += "-Xbootclasspath/a:${configurations.errorproneJavac.asPath}"
    jvmArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
    jvmArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.type=ALL-UNNAMED"
    jvmArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"
    jvmArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
    jvmArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
    jvmArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
    jvmArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
    jvmArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"
    jvmArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"
    options.compilerArgs << "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
    options.compilerArgs << "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
    options.compilerArgs << "--source" << "11"
    options.compilerArgs << "--target" << "11"
}

tasks.withType(Javadoc).configureEach {
    options.addBooleanOption("-add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED", true)
}
